Manga Reader Fixes (#1925)
* Fixed up an issue where image might be cut off in fit to height

* Removed some calls to backend for translating age rating to a string

* Fixed an issue with sizing on page splitting right to left.

* Ensure all image access requires apikey

* Removed a TODO

--- a/UI/Web/src/_manga-reader-common.scss
+++ b/UI/Web/src/_manga-reader-common.scss
@@ -1,3 +1,5 @@
+$scrollbarHeight: 34px;
+
 img {
   user-select: none;
 }
@@ -12,8 +14,9 @@ img {
   }
 
   &.full-height {
-    height: calc(100vh - 34px); // 34px is the height of the horizontal scrollbar that will appear
-    display: flex; // changed from inline-block to fix the centering on tablets not working
+    height: calc(100vh - $scrollbarHeight);
+    display: flex; 
+    align-content: center;
   }
 
   &.original {
